--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "YouTube Annotations",
+  "name": "YouTube Notes",
   "description": "Annotate YouTube videos and paste them into your preferred tool or keep them saved locally in your browser.",
   "version": "1.3",
   "icons": {
@@ -13,7 +13,7 @@
     "service_worker": "background.js"
   },
   "action": {
-    "default_popup": "yt-annotations/popup.html",
+    "default_popup": "yt-notes/popup.html",
     "default_icon": {
       "16": "images/icon-16.png",
       "32": "images/icon-32.png",
