--- a/manifest.json
+++ b/manifest.json
@@ -22,6 +22,7 @@
     }
   },
   "permissions": ["tabs", "activeTab", "scripting", "storage"],
+  "host_permissions": ["https://www.youtube.com/*"],
   "commands": {
     "_execute_action": {
       "suggested_key": {
