--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "YouTube Notes",
   "description": "Annotate YouTube videos and paste them into your preferred tool or keep them saved locally in your browser.",
-  "version": "1.3",
+  "version": "1.4",
   "icons": {
     "16": "images/icon-16.png",
     "32": "images/icon-32.png",
@@ -21,8 +21,14 @@
       "128": "images/icon-128.png"
     }
   },
+ "content_scripts": [
+   {
+     "matches": ["https://*.youtube.com/watch*"],
+     "js": ["content-script.js"]
+   }
+ ],
   "permissions": ["tabs", "activeTab", "scripting", "storage"],
-  "host_permissions": ["https://www.youtube.com/*"],
+  "host_permissions": ["https://www.youtube.com/watch*"],
   "commands": {
     "_execute_action": {
       "suggested_key": {
