--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "YouTube Notes",
   "description": "Annotate YouTube videos and paste them into your preferred tool or keep them saved locally in your browser.",
-  "version": "1.4",
+  "version": "1.0",
   "icons": {
     "16": "images/icon-16.png",
     "32": "images/icon-32.png",
@@ -21,12 +21,13 @@
       "128": "images/icon-128.png"
     }
   },
- "content_scripts": [
-   {
-     "matches": ["https://*.youtube.com/watch*"],
-     "js": ["content-script.js"]
-   }
- ],
+  "content_scripts": [
+    {
+      "matches": ["https://*.youtube.com/watch*"],
+      "run_at": "document_idle",
+      "js": ["content.js"]
+    }
+  ],
   "permissions": ["tabs", "activeTab", "scripting", "storage"],
   "host_permissions": ["https://www.youtube.com/watch*"],
   "commands": {
