Getting rid of YT events

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "YouTube Notes",
   "description": "Annotate YouTube videos and paste them into your preferred tool or keep them saved locally in your browser.",
-  "version": "1.0",
+  "version": "1.1",
   "icons": {
     "16": "images/icon-16.png",
     "32": "images/icon-32.png",
@@ -30,6 +30,9 @@
   ],
   "permissions": ["tabs", "activeTab", "scripting", "storage"],
   "host_permissions": ["https://www.youtube.com/watch*"],
+  "externally_connectable": {
+    "matches": ["https://www.youtube.com/watch*"]
+  },
   "commands": {
     "_execute_action": {
       "suggested_key": {
